[package]
name = "drv8301"
version = "0.1.0"
authors = ["h0gura <hiraku.o@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
nb = "^0.1"
enum-primitive-derive-nostd = "0.2.2"

[dependencies.embedded-hal]
version = "^0.2"
features = ["unproven"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.defmt]
version = "~0.2"
optional = true

